--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Red comunitaria y científica Las Lagunitas y Alpa Corral - FLISoL 2025 Río Cuarto</title>
+		<title>Las Lagunitas Red comunitaria y científica de Telecomunicaciones</title>
 
 		<link rel="stylesheet" href="reveal.js-master/dist/reveal.css">
 		<link rel="stylesheet" href="reveal.js-master/dist/theme/dracula.css" id="theme">
